--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <!---- BODY start --->
 <body class="text-brown-500">
-  <div class="bg-brown-100 w-full h-32 py-5 text-white border border-brown-200 ">
-   <a href="/"><h1 class=" text-4xl font-bold p-4 d-inline w-1/2 text-brown-700 float-left"> Plant Encylopedia </h1>  </a>
-        <div class="w-1/4 d-inline float-left" id="search-box">
-<input class="bg-brown-200 appearance-none border-2 border-brown-300 rounded py-2 px-4 text-brown-700 leading-tight focus:outline-none focus:bg-white focus:border-green-500" placeholder="search for a plant by scientific name" type="text"></input>
+  <div class="bg-brown-100 w-full h-32 py-4 text-white border border-brown-200 ">
+   <a href="/"><h1 style="font-weight: 500" class=" text-5xl  p-4 d-inline w-1/2 text-brown-700 float-left"> Plant Encylopedia </h1>  </a>
+        <div class="w-1/4 d-inline float-left pt-5" id="search-box">
+<input class="bg-brown-150 appearance-none border-2 border-brown-300 rounded py-2 px-4 text-brown-700 leading-tight focus:outline-none focus:bg-white focus:border-green-500" placeholder="search for a plant by scientific name" type="text"></input>
 </div>  
   </div>
 
@@ -27,13 +27,13 @@
 </div>
 
 <div id="right-page-container">
-<h2 class="text-3xl text-brown-700" > Description </h2>
+<h2 class="text-2xl font-semibold text-brown-700" > Description </h2>
 <p id="plant-description" class="w-full pr-20 text-xl text-brown-700"> Oregano (scientific name Origanum vulgare) is a common species of Origanum, a genus of the mint family (Lamiaceae). It is native to temperate western and southwestern Eurasia and the Mediterranean region.
 Oregano is a perennial herb, growing from 20–80 cm (7.9–31.5 in) tall, with opposite leaves 1–4 cm (0.39–1.57 in) long. Oregano will grow in a pH range between 6.0 (mildly acidic) and 9.0 (strongly alkaline),
  with a preferred range between 6.0 and 8.0. The flowers are purple, 3–4 mm (0.12–0.16 in) long, produced in erect spikes. It is sometimes called wild marjoram, and its close relative O. majorana is known as sweet marjoram.
 </p>
 
-<h2 class="text-3xl text-brown-700" id="taxonomy"> Taxonomy</h2>
+<h2 class="text-2xl font-semibold text-brown-700" id="taxonomy"> Taxonomy</h2>
 <div class="bg-brown-100 w-32"id="dendrogram-container" > </div>
 
 </div>
