--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Oregano is a perennial herb, growing from 20–80 cm (7.9–31.5 in) tall, with 
 </p>
 
 <h2 class="text-2xl font-semibold text-brown-700" id="taxonomy"> Taxonomy</h2>
-<div class="bg-brown-100 w-32"id="dendrogram-container" > </div>
+<div class="bg-brown-100 w-32 text-xl "id="dendrogram-container" > </div>
 
 </div>
 </div>
